	PR bootstrap/43681 	* expr.c (block_move_libcall_safe_for_call_parm): Avoid 	set but not used variable warning.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@158111 138bc75d-0d04-0410-961f-82ee72b054a4